Generalized non-deployment container